property reset button overflow fix

--- a/client/scss/Controls/PropertyGrid/PropertyGridPart.scss
+++ b/client/scss/Controls/PropertyGrid/PropertyGridPart.scss
@@ -105,9 +105,17 @@ $input-color: lighten($background-color, 18.5%);
           width: 40%;
           overflow: hidden;
           text-overflow: ellipsis;
+          
+          &.p-reset {
+            width: 30%;
+          }
+        }
 
+        .p-reset {
+          float: left;
           i.btn-reset {
-            margin-left: 3px;
+            margin-left: 1px;
+            margin-right: 1px;
 
             &:hover {
               cursor: pointer;
@@ -118,7 +126,7 @@ $input-color: lighten($background-color, 18.5%);
         /** Controllers */
         /** Controller-half (right) */
         .c {
-          float: left;
+          float: right;
           width: 60%;
           height: $row-height;
           overflow: hidden;
